# Idlize

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mocharc.json  AUTHORS.md  IDL.md  README.md  arktsconfig-application.json  arktsconfig-peers-main.json  arktsconfig-peers.json  arktsconfig-subset-index.json  arktsconfig-subset-main.json  arktsconfig-subset.json  arktsconfig.json  cjpm.toml  download-napi.mjs  download-sdk.json  download-sdk.mjs  interface_sdk-js.patch  package.json  rollup.config.components.mjs  rollup.config.dummy-panda.mjs  rollup.config.main.mjs  rollup.config.mjs  sdk-patch-notes.txt  stdlib.d.ts  tsconfig-generated.json  tsconfig-loader.json  tsconfig-subset.json  tsconfig.json
.devcontainer/: devcontainer.json
arkgen/: .gitignore  .gitlab-ci.yml  arktsconfig-application.json  arktsconfig-peers-ets.json  arktsconfig-peers-main.json  arktsconfig-peers.json  arktsconfig-sdk-ets.json  arktsconfig-subset-main.json  arktsconfig-subset.json  cjpm.toml  download-3rdtools.mjs  package.json  rollup.config.components.mjs  rollup.config.dummy-panda.mjs  rollup.config.mjs  tsconfig-loader.json
arkgen/native/: meson.build  meson_options.txt
demos/xml/: .gitignore  arktsconfig.main.json  meson.build  meson_options.txt  package.json  rollup.config.mjs  tsconfig.json
demos/xml/scripts/: build-panda.sh  run-panda.sh
demos/xml/src/: app.ts  index.ts
demos/xml/src/cpp/: parser_impl.h  xmlImpl.cc
demos/xml/src/node/: compat.ts  load_native.mjs  main.ts
demos/xml/src/panda/: compat.ts  main.ts
native/: getModifierImplFiles.mjs  meson.build  meson_options.txt  nativeBuild.mjs
native/dummy-panda/: vm.cc
ohosgen/demos/huks/: README.md  arktsconfig.json  arktsconfig.main.json  config.json  meson.build  meson_options.txt  package.json  rollup.config.mjs  tsconfig.json
ohosgen/demos/huks/idl/: huks.idl
ohosgen/demos/huks/scripts/: run-panda.sh
ohosgen/demos/huks/src/: app.ts
ohosgen/demos/huks/src/cpp/: huksImpl.cc
ohosgen/demos/huks/src/node/: compat.ts  native_library_name.mjs
ohosgen/demos/huks/src/panda/: compat.ts  components.ts  main.ts
ohosgen/system-tests/: .gitignore  build-panda.sh  create-test-case-template.py  meson.build  package.json  run-panda.sh
ohosgen/system-tests/huks/: README.md  expected_output.txt  generation_config.json  rollup.config.mjs
ohosgen/system-tests/huks/idl/: huks.idl
ohosgen/system-tests/huks/src/cpp/: huksImpl.cc
ohosgen/system-tests/huks/src/panda/: compat.ts  main.ts
ohosgen/system-tests/huks_with_class/: arktsconfig.json  arktsconfig.main.json  expected_output.txt  generation_config.json
ohosgen/system-tests/huks_with_class/idl/: huks.idl
ohosgen/system-tests/huks_with_class/src/panda/: compat.ts  components.ts  main.ts
ohosgen/system-tests/test_buffer/: README.md  arktsconfig.json  arktsconfig.main.json  expected_output.txt
ohosgen/system-tests/test_buffer/idl/: foo.idl
ohosgen/system-tests/test_buffer/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_generic_callback/: arktsconfig.main.json  expected_output.txt  generation_config.json
ohosgen/system-tests/test_generic_callback/src/cpp/: oh_common.h  test_generic_callbackImpl.cc
ohosgen/system-tests/test_generic_callback/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_generic_callback_named/: .gitignore  arktsconfig.json  arktsconfig.main.json  rollup.config.mjs
ohosgen/system-tests/test_generic_callback_named/src/cpp/: test_generic_callback_namedImpl.cc
ohosgen/system-tests/test_generic_callback_named/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_manually_decomposed_promise/: arktsconfig.main.json  expected_output.txt
ohosgen/system-tests/test_manually_decomposed_promise/idl/: foo.idl
ohosgen/system-tests/test_manually_decomposed_promise/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_modules_multilevel/: .gitignore  arktsconfig.main.json  expected_output.txt
ohosgen/system-tests/test_modules_multilevel/dts/: baz.d.ts
ohosgen/system-tests/test_modules_multilevel/src/cpp/: test_modules_multilevelImpl.cc
ohosgen/system-tests/test_modules_multilevel/src/panda/: components.ts
ohosgen/system-tests/test_modules_multilevel_property/: .gitignore  arktsconfig.json  arktsconfig.main.json  expected_output.txt
ohosgen/system-tests/test_modules_multilevel_property/dts/: bar.d.ts
ohosgen/system-tests/test_modules_multilevel_property/src/cpp/: oh_common.h
ohosgen/system-tests/test_modules_multilevel_property/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_modules_simple/: expected_output.txt  generation_config.json
ohosgen/system-tests/test_modules_simple/src/panda/: components.ts
ohosgen/system-tests/test_modules_struct/: expected_output.txt
ohosgen/system-tests/test_modules_struct/src/cpp/: test_modules_structImpl.cc
ohosgen/system-tests/test_modules_struct/src/panda/: compat.ts
ohosgen/system-tests/test_package/: .gitignore  arktsconfig.json  expected_output.txt
ohosgen/system-tests/test_package/idl/: bar.idl
ohosgen/system-tests/test_package/src/panda/: compat.ts  components.ts  main.ts
ohosgen/system-tests/test_promise/: README.md  arktsconfig.json  arktsconfig.main.json
ohosgen/system-tests/test_promise/dts/: foo.d.ts
ohosgen/system-tests/test_promise/src/cpp/: test_promiseImpl.cc
ohosgen/system-tests/test_promise/src/panda/: compat.ts  components.ts
ohosgen/system-tests/test_record/: arktsconfig.json  arktsconfig.main.json  expected_output.txt  generation_config.json
ohosgen/system-tests/test_record/idl/: foo.idl
ohosgen/system-tests/test_record/src/cpp/: test_record.h  test_recordImpl.cc
ohosgen/system-tests/test_record/src/panda/: compat.ts  components.ts  main.ts
ohosgen/system-tests/test_string_array/: arktsconfig.json  arktsconfig.main.json
ohosgen/system-tests/test_string_array/idl/: foo.idl
ohosgen/system-tests/test_string_array/src/cpp/: oh_common.h  test_string_arrayImpl.cc
ohosgen/system-tests/test_string_array/src/panda/: compat.ts  components.ts
peer_lib/call_log/: main.cpp  meson.build
(+2269 files in other folders)
